<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="2" 
        android:layout_weight = "1">

        <ImageButton
            android:id="@+id/imageButton1"
            android:contentDescription="@string/button1_desc"
            android:src="@string/button1_pic"
            style="@style/HorizontalGalleryButton" />
        

        <ImageButton
            android:id="@+id/imageButton2"
            android:contentDescription="@string/button2_desc"
            android:src="@string/button2_pic"
            style="@style/VerticalGalleryButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="2" 
        android:layout_weight = "1">

        <ImageButton
            android:id="@+id/imageButton3"
            android:contentDescription="@string/button3_desc"
            android:src="@string/button3_pic"
            style="@style/VerticalGalleryButton" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:contentDescription="@string/button4_desc"
            android:src="@string/button4_pic"
            style="@style/HorizontalGalleryButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="2" 
        android:layout_weight = "1">

        <ImageButton
            android:id="@+id/imageButton5"
            android:contentDescription="@string/button5_desc"
            android:src="@string/button5_pic"
            style="@style/VerticalGalleryButton" />

        <Button
            android:id="@+id/button6"
            android:contentDescription="@string/button6_desc"
            android:text="@string/button6_desc" 
            style="@style/GalleryButton"/>

    </LinearLayout>

</LinearLayout>